refactor: improved dtos and events
